--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -5,7 +5,7 @@
   author = {B{\o}velstad, H M M and Nyg\r{a}rd, S and St{\o}rvold, H L L. and
 	Aldrin, M and Borgan, O and Frigessi, A and Lingj{\ae}rde, O C C.
 	},
-  title = {Predicting survival from microarray data - a comparative study.},
+  title = {Predicting Survival from Microarray Data - a Comparative Study.},
   journal = {Bioinformatics},
   year = {2007},
   volume = {23},
@@ -15,7 +15,7 @@
 
 @ARTICLE{becker2009,
   author = {Becker, N and Werft, W and Toedt, G and  Lichter, P and Benner, A},
-  title = {penalizedSVM: a R-package for feature selection SVM classification.},
+  title = {\pkg{penalizedSVM}: A \proglang{R}-package for Feature Selection SVM Classification.},
   journal = {Bioinformatics},
   year = {2009},
   volume = {25},
@@ -24,11 +24,20 @@
   timestamp = {2013.02.15}
 }
 
+@MANUAL{penSVM,
+  title = {\pkg{penalizedSVM}: Feature Selection SVM Using Penalty Functions},
+  author = {Becker, N and Werft, W and Benner, A},
+  year = {2012},
+  note = {\proglang{R}~package version~1.1},
+  url = {http://CRAN.R-project.org/package=penalizedSVM}
+}
+
+
 @ARTICLE{benner2010,
   author = {Benner, A. and Zucknick, M. and Hielscher, T. and Ittrich, C. and
 	Mansmann, U.},
-  title = {High-dimensional {Cox} models: The choice of penalty as part of the
-	model building process},
+  title = {High-Dimensional {Cox} Models: The Choice of Penalty as Part of the
+	Model Building Process},
   journal = {Biometrical Journal},
   year = {2010},
   volume = {52},
@@ -38,8 +47,8 @@
 
 @ARTICLE{BS2008,
   author = {Binder, H. and Schumacher, M.},
-  title = {Adapting prediction error estimates for biased complexity selection
-	in high-dimensional bootstrap samples},
+  title = {Adapting Prediction Error Estimates for Biased Complexity Selection
+	in High-Dimensional Bootstrap Samples},
   journal = {Statistical Applications in Genetics and Molecular Biology},
   year = {2008},
   volume = {7},
@@ -49,8 +58,8 @@
 
 @ARTICLE{cox:1972,
   author = {Cox, D.R.},
-  title = {Regression models and life tables (with discussion)},
-  journal = {Journal of the Royal Statistical Society; Series B},
+  title = {Regression Models and Life Tables (with Discussion)},
+  journal = {Journal of the Royal Statistical Society B},
   year = {1975},
   volume = {74},
   pages = {187--200}
@@ -58,7 +67,7 @@
 
 @ARTICLE{cox:1975,
   author = {Cox, D.R.},
-  title = {Partial likelihood},
+  title = {Partial Likelihood},
   journal = {Biometrika},
   year = {1975},
   volume = {62},
@@ -67,7 +76,7 @@
 
 @ARTICLE{Dudoit2003,
   author = {Dudoit, Sandrine and Shaffer, Juliet P. and Boldrick, Jennifer C.},
-  title = {{Multiple Hypothesis Testing in Microarray Experiments}},
+  title = {Multiple Hypothesis Testing in Microarray Experiments},
   journal = {Statistical Science},
   year = {2003},
   volume = {18},
@@ -101,7 +110,7 @@
 
 @ARTICLE{efron1997,
   author = {Efron, B. and Tibshirani, R.},
-  title = {Improvements on cross-validation: The. 632+ bootstrap method},
+  title = {Improvements on Cross-Validation: The. 632+ Bootstrap Method},
   journal = {Journal of the American Statistical Association},
   year = {1997},
   pages = {548--560},
@@ -110,8 +119,8 @@
 
 @ARTICLE{fan2010,
   author = {Fan, J. and Lv, J.},
-  title = {A selective overview of variable selection in high dimensional feature
-	space},
+  title = {A Selective Overview of Variable Selection in High-Dimensional Feature
+	Space},
   journal = {Statistica Sinica},
   year = {2010},
   volume = {20},
@@ -119,8 +128,8 @@
 }
 
 @MANUAL{glmnet,
-  title = {\pkg{glmnet}: Lasso and elastic-net regularized generalized linear
-	models},
+  title = {\pkg{glmnet}: Lasso and Elastic-Net Regularized Generalized Linear
+	Models},
   author = {Jerome Friedman and Trevor Hastie and Rob Tibshirani},
   year = {2013},
   note = {\proglang{R}~package version~1.8-5},
@@ -141,8 +150,8 @@
 
 @INPROCEEDINGS{froehlich2005,
   author = {Froehlich, H. and Zell, A.},
-  title = {Efficient parameter selection for support vector machines in classification
-	and regression via model-based global optimization},
+  title = {Efficient Parameter Selection for Support Vector Machines in 
+Classification	and Regression via Model-Based Global Optimization},
   booktitle = {Proceedings of the International Joint Conference of Neural Networks},
   year = {2005},
   pages = {1431--1438}
@@ -151,8 +160,8 @@
 @ARTICLE{Bioconductor,
   author = {Robert C Gentleman and Vincent J. Carey and Douglas M. Bates and
 	{others}},
-  title = {Bioconductor: Open software development for computational biology
-	and bioinformatics},
+  title = {Bioconductor: Open Software Development for Computational Biology
+	and Bioinformatics},
   journal = {Genome Biology},
   year = {2004},
   volume = {5},
@@ -174,8 +183,8 @@
 
 @ARTICLE{graf99,
   author = {Erika Graf and Claudia Schmoor and Willi Sauerbrei and Martin Schumacher},
-  title = {Assessment and comparison of prognostic classification schemes for
-	survival data},
+  title = {Assessment and Comparison of Prognostic Classification Schemes for
+	Survival Data},
   journal = {Statistics in Medicine},
   year = {1999},
   volume = {18},
@@ -186,7 +195,7 @@
 
 @ARTICLE{Jones1998,
   author = {Jones, D and Schonlau, M and Welch, W},
-  title = {Efficient global optimization of expensive black-box functions},
+  title = {Efficient Global Optimization of Expensive Black-Box Functions},
   journal = {Journal of Global Optimization},
   year = {1998},
   volume = {13},
@@ -195,9 +204,8 @@
 
 @ARTICLE{MeinshausenBuehlmann2010,
   author = {Meinshausen, Nicolai and B\"uhlmann, Peter},
-  title = {Stability selection},
-  journal = {Journal of the Royal Statistical Society - Series B: Statistical
-	Methodology},
+  title = {Stability Selection},
+  journal = {Journal of the Royal Statistical Society B},
   year = {2010},
   volume = {72},
   pages = {417--473},
@@ -210,8 +218,8 @@
 	and G. Marcucci and S.P. Whitman and K. Maharry and P. Paschka and
 	R.A. Larson and W.E. Berdel and T. Buchner and B. Wormann and U.
 	Mansmann and W. Hiddemann and S.K. Bohlander and C. Buske},
-  title = {An 86 probe set gene expression signature predicts survival in cytogenetically
-	normal acute myeloid leukemia},
+  title = {An 86 Probe Set Gene Expression Signature Predicts Survival in Cytogenetically
+	Normal Acute Myeloid Leukemia},
   journal = {Blood},
   year = {2008},
   volume = {112(10)},
@@ -228,8 +236,8 @@
 
 @ARTICLE{Porz2009,
   author = {Porzelius, C. and Binder, H. and Schumacher, M.},
-  title = {Parallelized prediction error estimation for evaluation of high-dimensional
-	models},
+  title = {Parallelized Prediction Error Estimation for Evaluation of High-Dimensional
+	Models},
   journal = {Bioinformatics},
   year = {2009},
   volume = {25},
@@ -238,9 +246,9 @@
 }
 
 @MANUAL{R11,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Development Core Team}},
-  organization = {R Foundation for Statistical Computing},
+  title = {\proglang{R}: A Language and Environment for Statistical Computing},
+  author = {\proglang{R} Development Core Team},
+  organization = {\proglang{R} Foundation for Statistical Computing},
   address = {Vienna, Austria},
   year = {2011},
   note = {{ISBN} 3-900051-07-0},
@@ -249,7 +257,7 @@
 
 @ARTICLE{schumacher07,
   author = {Martin Schumacher and Harald Binder and Thomas Gerds},
-  title = {Assessment of survival prediction models based on microarray data},
+  title = {Assessment of Survival Prediction Models Based on Microarray Data},
   journal = {Bioinformatics},
   year = {2007},
   volume = {23},
@@ -272,7 +280,7 @@
 
 @ARTICLE{tibshirani97,
   author = {Tibshirani, Robert},
-  title = {The lasso method for variable selection in the {Cox} model},
+  title = {The Lasso Method for Variable Selection in the {Cox} Model},
   journal = {Statistics in Medicine},
   year = {1997},
   volume = {16},
@@ -281,8 +289,8 @@
 
 @ARTICLE{tibshirani96,
   author = {Tibshirani, Robert},
-  title = {Regression Shrinkage and Selection Via the Lasso},
-  journal = {Journal of the Royal Statistical Society, Series B: Methodological},
+  title = {Regression Shrinkage and Selection via the Lasso},
+  journal = {Journal of the Royal Statistical Society B},
   year = {1996},
   volume = {58},
   pages = {267--288},
@@ -313,7 +321,7 @@
 
 @ARTICLE{wasserman2009,
   author = {Wasserman, L. and Roeder, K.},
-  title = {High dimensional variable selection},
+  title = {High Dimensional Variable Selection},
   journal = {The Annals of Statistics},
   year = {2009},
   volume = {37},
@@ -323,8 +331,8 @@
 
 @ARTICLE{zou05,
   author = {Zou, H. and Hastie, T.},
-  title = {Regularization and variable selection via the elastic net},
-  journal = {Journal of the Royal Statistical Society, Series B},
+  title = {Regularization and Variable Selection via the Elastic-Net},
+  journal = {Journal of the Royal Statistical Society B},
   year = {2005},
   volume = {67(2)},
   pages = {301--320}
