changes to Rnw file; one new reference in bib file
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/c060@123 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/vignettes/c060.bib
+++ b/vignettes/c060.bib
@@ -212,6 +212,15 @@ Classification	and Regression via Model-Based Global Optimization},
   number = {4}
 }
 
+@ARTICLE{MMB2009,
+  author = {Meinshausen, Nicolai and Meier, Lukas and B\"uhlmann, Peter},
+  title = { P-values for high-dimensional regression},
+  journal = {Journal of the American Statistical Association},
+  year = {2009},
+  volume = {104},
+  pages = {1671--1681}
+}
+
 @ARTICLE{metzeler08,
   author = {K.H. Metzeler and M. Hummel and C.D. Bloomfield and K. Spiekermann
 	and J. Braess and M.-C. Sauerland and A. Heinecke and M. Radmacher
